# krotov

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  404.html  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SciPost.cls  SciPost_bibstyle.bst  codecov.yml  environment.yml  index.html  krotov.tex  pyproject.toml  readthedocs.yml  refs.bib  setup.cfg  setup.py  tox-conda.ini  tox-pyenv.ini  tox.ini  versions.json  versions.py
.github/: ISSUE_TEMPLATE.md
.travis/: docs.sh  docs_post_process.py  versions.py
binder/: environment.yml
docs/: 01_overview.patch  01_overview.rst  04_features.rst  06_introduction.rst  06_krotovs_method.rst  07_krotovs_method.rst  07_qutip_usage.rst  08_examples.rst  08_grape_crab.rst  09_examples.rst  09_howto.rst  09_propagation.rst  10_howto.rst  10_other_methods.rst  10_time_discretization.ipynb  11_howto.rst  12_howto.rst  12_other_methods.rst  99_bibliography.rst  Makefile  _README.patch  build_pdf.py  clean.py  conf.py  conftest.py  doctr_deploy_key.enc  examples.rst  features.rst  grape_crab.rst  howto.rst  index.rst  krotovs_method.rst  krotovscheme.tex  make.bat  nbval_sanitize.cfg  oct_decision_tree.tex  propagation.rst  python37.inv  qutip_usage.rst  readme.patch  (+4 more)
doctr/: .doctr-files  01_overview.html  02_contributing.html  03_authors.html  04_features.html  05_history.html  06_introduction.html  07_krotovs_method.html  08_qutip_usage.html  09_examples.html  10_howto.html  11_other_methods.html  12_related_software.html  99_bibliography.html  _README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/: README.md  ensemble.out  ensemble.py  quantum_gate_hilbert.out  quantum_gate_hilbert.py  quantum_gate_liouville.out  quantum_gate_liouville.py  second_order.out  second_order.py  test_examples.py  tls_state_to_state.dump  tls_state_to_state.out  tls_state_to_state.py
fig/: Makefile  krotovscheme.tex  matplotlibrc  mpl.py  tls_state_to_state_iters.py
master/: .buildinfo  .doctr-files  01_overview.html  02_contributing.html  03_authors.html  04_features.html  05_history.html  06_introduction.html  07_krotovs_method.html  08_qutip_usage.html  09_examples.html  10_howto.html  11_other_methods.html  12_related_software.html  99_bibliography.html  _README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
scripts/: bootstrap.py  clean.py  install-pre-commit.py  pip_sequential.py  pre-commit.py  release.py
src/: conftest.py
tests/: test_dump_result.py  test_functionals.py  test_infohooks.py  test_krotov.py  test_krotov_objective.py  test_krotov_result.py  test_mu.py  test_numpy_controls.py  test_objective.py  test_objectives.py  test_overlap.py  test_parallelization.py  test_pulse_conversion.py  test_pulse_options.py  test_result.py  test_result_serialization.py  test_shapes.py  test_structural_conversions.py  transmon_xgate_system_mod.py
v0.1.0/: .buildinfo  02_contributing.html  03_authors.html  04_features.html  05_history.html  06_krotovs_method.html  07_qutip_usage.html  08_grape_crab.html  09_propagation.html  10_time_discretization.html  11_examples.html  12_howto.html  99_bibliography.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
v0.2.0/: .buildinfo  01_overview.html  02_contributing.html  03_authors.html  04_features.html  05_history.html  06_krotovs_method.html  07_qutip_usage.html  09_propagation.html  10_examples.html  11_howto.html  12_other_methods.html  99_bibliography.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.3.0/: .buildinfo  01_overview.html  02_contributing.html  03_authors.html  04_features.html  05_history.html  06_krotovs_method.html  07_qutip_usage.html  08_examples.html  09_howto.html  10_other_methods.html  99_bibliography.html  _README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.4.0/: .buildinfo  01_overview.html  02_contributing.html  03_authors.html  04_features.html  05_history.html  06_krotovs_method.html  07_qutip_usage.html  08_examples.html  09_howto.html  10_other_methods.html  99_bibliography.html  _README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.4.1/: .buildinfo  01_overview.html  02_contributing.html  03_authors.html  04_features.html  05_history.html  06_introduction.html  07_krotovs_method.html  08_qutip_usage.html  09_examples.html  10_howto.html  11_other_methods.html  99_bibliography.html  _README.html  _downloads  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.5.0/: .buildinfo  01_overview.html  02_contributing.html  03_authors.html  04_features.html  05_history.html  06_introduction.html  07_krotovs_method.html  08_qutip_usage.html  09_examples.html  10_howto.html  11_other_methods.html  99_bibliography.html  _README.html  _downloads  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.0.0-rc1/: .doctr-files  01_overview.html  02_contributing.html  03_authors.html  04_features.html  05_history.html  06_introduction.html  (+14 more)
(+822 files in other folders)
